# assistant-service

./: .env  .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  .replit  AGENTS.md  CHANGELOG.md  CLAUDE-project.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  PR_DESCRIPTION.md  README.md  assistant.json  deploy.sh  docker-compose.yml  main.py  prompts.py  pyproject.toml  replit.nix
.chainlit/: config.toml
.github/workflows/: ci.yml  claude-code-review.yml  merged.yml
ai_assistant_service/: __init__.py  bootstrap.py  structured_logging.py  tools.py
ai_assistant_service/entities/: events.py
ai_assistant_service/repositories/: base.py  gcp.py  local.py
ai_assistant_service/server/: __init__.py  main.py
ai_assistant_service/services/: README.md  __init__.py  message_parser.py  ws_stream_handler.py
assistant-service/: app.py  main.py  processors.py
assistant_engine/: __init__.py  api.py  bb_logging.py  config.py  correlation.py  functions.py  logging_config.py  main.py  openai_helpers.py  processors.py  structured_logging.py
assistant_engine/models/: config.py
assistant_engine/repositories/: __init__.py  gcp.py
assistant_engine/tests/: fake_chainlit.py  test_api.py  test_chainlit_config.py  test_config.py  test_correlation_context.py  test_function_validation.py  test_logging_config.py  test_main.py  test_process_run_stream.py  test_processors.py  test_repositories.py  test_tool_output_error_recovery.py  test_tool_processor.py
assistant_factory/: client_functions.py  config.py  create_assistant.py  create_config.py  main.py  prompt_templates.py  tool_builder.py  tools_example.json
assistant_factory/client_spec/lazycampervan/: assistants.py  instructions.py
assistant_factory/client_spec/leogv/: assistants.py  functions.py  instructions.py
assistant_factory/models/: __init__.py  engine_config.py
assistant_factory/storage/: __init__.py  gcp_config.py
assistant_factory/tests/: test_main.py  test_tool_builder.py
assistant_service/: bootstrap.py  config.py  correlation.py  data_models.py  main.py  openai_helpers.py  processors.py  repositories.py  retreivers.py  service_config.py  structured_logging.py  tools.py
assistant_service/core/: __init__.py  run_processor.py
assistant_service/entities/: __init__.py  config.py  events.py  headers.py  interfaces.py  message_data.py  schemas.py  step_data.py
assistant_service/infrastructure/: openai_client.py
assistant_service/models/: __init__.py
assistant_service/processors/: README.md  __init__.py  message_parser.py  message_processor.py  openai_orchestrator.py  run_processor.py  stream_handler.py  tool_executor.py  websocket_processor.py
assistant_service/providers/: __init__.py  openai_client.py  openai_helpers.py
assistant_service/repositories/: __init__.py  base.py  gcp.py  local.py
assistant_service/server/: endpoints.py  error_handlers.py  main.py
assistant_service/services/: README.md  __init__.py  message_parser.py  openai_orchestrator.py  sse_stream_handler.py  stream_handler.py  tool_executor.py
botbrew_commons/: __init__.py  pyproject.toml
botbrew_commons/botbrew_commons/data_models/: __init__.py  config.py
botbrew_commons/botbrew_commons/repositories/: __init__.py  configs.py  secrets.py
commons/data_models/: config.py
commons/repositories/: configs.py  secrets.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.test.tsx  App.tsx  style.css
nowisthetime/: main.py  prompts.py  utilities.py
nowisthetime_legacy/: main.py  utilities.py
nowisthetime_legacy/tests/: test_api.py
scripts/: README.md
scripts/assistant_registration/: __init__.py  example-config.json  register_assistant.py  registration.py
scripts/assistant_registration/sample_data/: api_guide.txt  faq.md  python_basics.txt
scripts/conversation/: http_chat.py  http_client.py  websocket.py  websocket_client.py
scripts/isolation/: api_layer.py
tests/: conftest.py
tests/ai_assistant_service/: conftest.py  test_bootstrap.py  test_correlation_context.py  test_structured_logging.py
tests/ai_assistant_service/repositories/: test_repositories.py
tests/ai_assistant_service/server/: test_api.py  test_sse_enhancements.py
tests/ai_assistant_service/services/: test_message_parser.py  test_openai_helpers.py  test_openai_orchestrator.py  test_process_run_stream.py  test_sse_stream_handler.py  test_tool_executor.py  test_tool_output_error_recovery.py  test_ws_stream_handler.py
tests/assistant_engine/: test_config.py  test_correlation_context.py  test_openai_helpers.py  test_processors.py  test_structured_logging.py  test_tool_processor.py
tests/assistant_service/: conftest.py  test_api.py  test_bootstrap.py  test_config.py  test_correlation_context.py  test_openai_helpers.py  test_openai_orchestrator.py  test_process_run_stream.py  test_processors.py  test_repositories.py  test_run_processor.py  test_stream_handler.py  test_structured_logging.py  test_tool_output_error_recovery.py  test_tool_processor.py  test_websocket_handler.py
tests/assistant_service/repositories/: test_repositories.py
tests/assistant_service/server/: test_api.py  test_sse_enhancements.py
tests/assistant_service/services/: test_message_parser.py  test_openai_helpers.py  test_openai_orchestrator.py  test_process_run_stream.py  test_sse_stream_handler.py  test_stream_handler.py  test_tool_executor.py  test_tool_output_error_recovery.py  test_ws_stream_handler.py
tests/commons/: test_config.py
tests/scripts/: test_http_chat_sse.py
