[project]
name = "assistant-service"
version = "0.1.0"
description = ""
authors = [{name="Leopoldo Garcia Vargas", email="lk13.dev@gmail.com"}]
requires-python = ">=3.10,<3.11"
dependencies = [
    "openai>=1.84.0",
    "packaging>=24.2",
    "fastapi>=0.115.12",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "uvicorn>=0.34.3",
    "langchain>=0.3.25",
    "google-cloud-storage>=3.1.0",
    "google-cloud-secret-manager>=2.24.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.13",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-mock>=3.14.1",
    "mypy>=1.16.0",
    "pre-commit>=4.2.0",
]

[tool.uv.sources]
botbrew_commons = { path = "./botbrew_commons" }

[tool.setuptools.packages.find]
where = ["."]
include = [
    "assistant_engine*",
    "assistant_factory*",
    "botbrew_commons*",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
log_cli_level = "info"
testpaths = [
    "assistant_factory/tests",
    "assistant_engine/tests",
]

[tool.ruff]
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".hg", ".ipynb_checkpoints", ".mypy_cache",
    ".pytest_cache", ".ruff_cache", ".venv", ".vscode", "__pypackages__", "build",
    "dist", "site-packages", "venv", "nowisthetime_legacy",
]
fix = true
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "ARG", "SIM"]
ignore = ["W291", "W292", "W293", "SIM115"]
fixable = ["ALL"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
plugins = []

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "main"
upload_to_vcs_release = true

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
